add authentication to S3 API that works with fake generated AWS credentials that include the JWT as session token
